# uVAProblemSet

./: .gitignore  CMakeLists.txt  README.md  addnew.py
src/: problem_100.cpp  uVA_100.cpp  uVA_100.hpp
src/uVA_00119/: uVA_00119.cpp  uVA_00119.hpp  uVA_00119_description.md  uVA_00119_launcher.cpp
src/uVA_00573/: uVA_00573.cpp  uVA_00573.hpp  uVA_00573_description.md  uVA_00573_launcher.cpp
src/uVA_00661/: uVA_00661.cpp  uVA_00661.hpp  uVA_00661_description.md  uVA_00661_launcher.cpp
src/uVA_0100/: uVA_0100.cpp  uVA_0100.hpp  uVA_0100_description.md  uVA_0100_launcher.cpp
src/uVA_0272/: uVA_0272.cpp  uVA_0272.hpp  uVA_0272_description.md  uVA_0272_launcher.cpp
src/uVA_100/: uVA_100.cpp  uVA_100.hpp  uVA_100_launcher.cpp
src/uVA_10141/: uVA_10141.cpp  uVA_10141.hpp  uVA_10141_description.md  uVA_10141_launcher.cpp
src/uVA_10550/: uVA_10550.cpp  uVA_10550.hpp  uVA_10550_description.md  uVA_10550_launcher.cpp
src/uVA_11044/: uVA_11044.cpp  uVA_11044.hpp  uVA_11044_description.md  uVA_11044_launcher.cpp
src/uVA_11172/: uVA_11172_description.md  uVA_11172_launcher.cpp
src/uVA_1124/: uVA_1124_launcher.cpp
src/uVA_11364/: uVA_11364.cpp  uVA_11364.hpp  uVA_11364_description.md  uVA_11364_launcher.cpp
src/uVA_11507/: uVA_11507.cpp  uVA_11507.hpp  uVA_11507_description.md  uVA_11507_launcher.cpp
src/uVA_11586/: uVA_11586.cpp  uVA_11586.hpp  uVA_11586_description.md  uVA_11586_launcher.cpp
test/: uVA_100_test.cpp  uVA_100_test_input.txt
test/uVA_00119/: uVA_00119_test.cpp
test/uVA_00573/: uVA_00573_test.cpp  uVA_00573_test_input.txt
test/uVA_00661/: uVA_00661_test.cpp  uVA_00661_test_input.txt
test/uVA_0100/: uVA_0100_test.cpp
test/uVA_0272/: uVA_0272_test.cpp
test/uVA_100/: uVA_100_test.cpp
test/uVA_10141/: uVA_10141_test.cpp
test/uVA_10550/: uVA_10550_test.cpp
test/uVA_11044/: uVA_11044_test.cpp
test/uVA_1124/: uVA_1124_description.md
test/uVA_11364/: uVA_11364_test.cpp
test/uVA_11507/: uVA_11507_test.cpp
test/uVA_11586/: uVA_11586_test.cpp
